# linuxscp

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
build-aux/: io.github.linuxscp.LinuxSCP.json  io.github.theflyingjay.LinuxSCP.json
data/: io.github.linuxscp.LinuxSCP.desktop  io.github.linuxscp.LinuxSCP.metainfo.xml  io.github.theflyingjay.LinuxSCP.desktop  io.github.theflyingjay.LinuxSCP.metainfo.xml
docs/: index.html
linuxscp/: Cargo.toml
linuxscp-askpass/: Cargo.toml
linuxscp-askpass/src/: main.rs
linuxscp/src/: app.rs  fsops.rs  lib.rs  main.rs  runtime.rs  secrets.rs  sessions.rs  settings.rs  transfers.rs  types.rs
linuxscp/src/ssh/: askpass.rs  config.rs  connect.rs  mod.rs
linuxscp/src/ui/: config_editor.rs  connect_dialog.rs  edit.rs  entry_object.rs  mod.rs  notify.rs  pane.rs  prompts.rs  properties.rs  queue.rs  site_editor.rs  splash.rs  tree_node.rs  workspace.rs
linuxscp/tests/: sftp_roundtrip.rs  transfer_parallel.rs
scripts/: build-deb.sh  cut-release.sh  test-server.sh
