[workspace]
resolver = "3"
members = ["linuxscp", "linuxscp-askpass"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Debian 13 "Trixie" ships rustc 1.85 and building there from source is a
# supported path — keep this floor in mind (and clippy MSRV-aware) before
# using newer language features like let-chains.
rust-version = "1.85"
authors = ["Jacob Petrosky <theflyingjay@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/theflyingjay/linuxscp"

[profile.release]
lto = "thin"
strip = true
